Mostly finished UI Ongoing fixes: change toddle glow effect color 			 align enrolled column center 			 reduce space between instructor and days column

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 #wrapper{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0.5%;
 }
+
 #card-header-AU {
-    background-color: #000000; 
+    background-color: #E14D2A; 
     color:floralwhite; 
     padding-top: 2%;
     padding-left: 2%;
     font-size: x-large;
+    font-weight: lighter;
 }
 
 #card-body-AU{
-    background-color: #000000;
+    background-color: #212121;
 }
 
 #container-AU{
@@ -19,27 +20,97 @@
 }
 
 #inputGroup-sizing-sm{
-    background-color: #E75A0D;
-    color: floralwhite;
-}
-
-#col-AU{
-    width: 50%;
-}
-
-#col-AU-small{
-    width: 25%;
+    background-color: #E14D2A;
+    color: white;
+    font-size: small;
+    font-weight: normal;
 }
 
 #input-AU{
     min-width: 55%;
+    font-size: small;
+    font-weight: normal;
+    color: darkslategrey;
+    padding: auto;
+}
+
+#select-AU{
+    font-size: small;
+    font-weight: normal;
+    color: darkslategrey;
+    margin-left: 20px;
+}
+
+#togglegroup-AU{
+    margin-left: 50px;
+    padding: auto;
 }
 
 #toggle-label-AU{
     color: floralwhite;
+    font-size: small;
+    font-weight: normal;
 }
 
-#toggle-AU{
-    color: #E75A0D;
+#toggle-AU:active{
+    background-color: #E14D2A;
+}
 
+#toggle-AU:checked{
+    background-color: #E14D2A;
+}
+
+#table-AU{
+    margin: 3%;
+    font-size: small;
+    color: #212121;
+}
+
+#pill-AU {
+    font-size: xx-small;
+    font-weight: normal;
+}
+
+#open-AU{
+    margin-left: 30%;
+    color: green;
+}
+
+#close-AU{
+    margin-left: 30%;
+    color: red;
+}
+
+#online-AU{
+    margin-left: 30%;
+    color: darkslategrey;
+}
+
+#remote-AU{
+    margin-left: 30%;
+    color: #E14D2A;
+}
+
+#sortbutton-AU{
+    background-color: white;
+    color: #383838;
+    padding:0.1%;
+    border: none;
+}
+
+#thead-AU{
+    color: #E14D2A;
+    background-color: white;
+    border-bottom: 1.01px solid grey;
+}
+
+#clearbtn-AU{
+    font-size: xx-small;
+    font-weight: normal;
+    padding: 5px;
+}
+
+#btnholder-AU{
+    margin-left: 60%;
+    padding: auto;
 }
